added framer animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ubuntu:wght@400;700&display=swap');
 
 @tailwind base;
@@ -51,10 +52,17 @@ body {
 .hidden {
   display: none;
 }
+.font2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: semi-bold;
+  font-size: 4rem;
+
+}
 .font1 {
   font-family: "Ubuntu", cursive;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 3rem;
   font-style: normal;
 }
 /* background-image: url("https://pin.it/1QJVF WRDP") */
@@ -73,14 +81,13 @@ body {
 
 
 .bgr {
- background: linear-gradient(to right, rgba(196, 181, 253, 0), rgba(124, 29, 226, 0.8) 50%, rgba(124, 29, 226, 0.8) 50%, rgba(196, 181, 253, 0));
+ background: linear-gradient(to right, rgba(196, 181, 253, 0), rgba(124, 29, 226, 1) 20%, rgba(124, 29, 226, 1) 80%, rgba(196, 181, 253, 0));
 }
 
 
 
-/* 
 
-*/
+
 :root {
   --marquee-width: 80vw;
   --marquee-height: 20vh;
