--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ubuntu:wght@400;700&display=swap');
 
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+  scroll-behavior: smooth;
+}
+
+@font-face {
+  font-family: 'CustomFont';
+  src: url('/misc/Auralyess Free Trial-89db.woff2') format('woff2');
+  /* font-weight: 200; */
+  /* font-style: semi-bold; */  
+  /* font-size: 24rem; */
+  /* letter-spacing:2px; */
+}
+
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
@@ -54,9 +68,9 @@ body {
 }
 .font2 {
   font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  font-style: semi-bold;
-  font-size: 4rem;
+  /* font-weight: 200; */
+  /* font-style: semi-bold; */
+  /* font-size: 4rem; */
 
 }
 .font1 {
@@ -185,3 +199,27 @@ body {
   }
 }
  
+
+
+.scroll-text {
+  white-space: nowrap;
+ color:white;
+  overflow: hidden;
+  display: block;
+  width: 100%;
+}
+
+.scroll-text::after {
+  content: '';
+  display: inline-block;
+  padding-left: 100%;
+}
+
+.scroll-text {
+  animation: scroll 15s linear infinite;
+}
+
+@keyframes scroll {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
